--- a/en/osz.html
+++ b/en/osz.html
@@ -143,11 +143,11 @@
 										</p>
 										<ul class="detail_ul">
 											<li class="wd_40per">
-												<h3>여성</h3>
+												<h3>Women</h3>
 												<p><span class="color_span bk_1">72%</span></p>
 											</li>
 											<li class="wd_60per">
-												<h3>남성</h3>
+												<h3>Men</h3>
 												<p><span class="color_span bk_5">28%</span></p>
 											</li>
 										</ul>
