--- a/en/hdwk.html
+++ b/en/hdwk.html
@@ -190,11 +190,11 @@
 										<li class="gender_graph_li">
 											<ul class="detail_ul">
 												<li>
-													<h2>Woman</h2>
+													<h2>Women</h2>
 													<p><span class="color_span blue">파랑</span> 56%</p>
 												</li>
 												<li>
-													<h2>Man</h2>
+													<h2>Men</h2>
 													<p><span class="color_span yellow">노랑</span> 44%</p>
 												</li>
 											</ul>
