--- a/index.html
+++ b/index.html
@@ -210,25 +210,52 @@
 
 		<section id="for_fun">
 			<ul>
+				<li class="li_4">
+					<div class="for_hi">
+						<div class="rnd ">
+							<img src="images/main/motiv_thmb.webp" alt="모티브 앱 섬네일" />
+						</div>	
+					</div>
+					<a href="#" class="fn_a">자세히 보기</a>	
+					<div class="fun_div">
+						<div class="fun_bg wd_1920">
+							<p>Application</p>
+							<h2 class="ko">2025년 제작</h2>
+							<p class="app_p ad">Affinity Designer</p>
+							<div class="fun_descript">
+								<p class="ko">동기부여를 중심으로 아이디어와 하루 일과를 더 편리하고 섬세하게 관리할 수 있는 어플리케이션</p>
+							</div>
+							<div class="fun_img">
+								<img src="images/main/motiv_cont_1.webp" class="img_1" alt="motiv main image">
+								<img src="images/main/motiv_cont_2.webp" class="img_2" alt="motiv main image">
+								<img src="images/main/motiv_cont_3.webp" class="img_3" alt="motiv main image">
+								<img src="images/main/motiv_cont_4.webp" class="img_4 gry" alt="motiv main image">
+								<img src="images/main/motiv_cont_5.webp" class="img_5 gry" alt="motiv main image">
+								<img src="images/main/motiv_cont_6.webp" class="img_6 gry" alt="motiv main image">
+							</div>
+							<a href="" class="close">닫기</a>
+						</div>
+					</div>
+				</li>
 				<li class="li_3">
 					<div class="for_hi">
 						<div class="rnd ">
-							<img src="images/main/lumin_thmb.webp" alt="lumin thumbnail" />
+							<img src="images/main/lumin_thmb.webp" alt="루민 화장품 섬네일" />
 						</div>	
 					</div>
-					<a href="#" class="fn_a">SEE MORE</a>	
+					<a href="#" class="fn_a">자세히 보기</a>	
 					<div class="fun_div">
 						<div class="fun_bg wd_1920">
 							<p>E-Commerce Site</p>
-							<h2>Created in 2024</h2>
+							<h2 class="ko">2024년 제작</h2>
 							<p class="app_p fi">Figma</p>
 							<div class="fun_descript">
-								<p>Men's cosmetics</p>
+								<p class="ko">남성 화장품</p>
 							</div>
 							<div class="fun_img">
-								<img src="images/main/lumin_cont.webp" class="img_1" alt="lumin main image 1">
+								<img src="images/main/lumin_cont.webp" class="img_1" alt="lumin main image">
 							</div>
-							<a href="" class="close">Close</a>
+							<a href="" class="close">닫기</a>
 						</div>
 					</div>
 				</li>
@@ -236,17 +263,17 @@
 				<li class="li_2">
 					<div class="for_hi">
 						<div class="rnd ">
-							<img src="images/main/energy_thmb.webp" alt="yourenergy thumbnail" />
+							<img src="images/main/energy_thmb.webp" alt="yourenergy 섬네일" />
 						</div>	
 					</div>
-					<a href="#" class="fn_a">SEE MORE</a>	
+					<a href="#" class="fn_a">자세히 보기</a>	
 					<div class="fun_div">
 						<div class="fun_bg wd_1920">
 							<p>Website</p>
-							<h2>Created in 2024</h2>
+							<h2 class="ko">2024년 제작</h2>
 							<p class="app_p fi">Figma</p>
 							<div class="fun_descript">
-								<p>YOURENERGY is a company that produces the vitamins you need in the flavor and type (jelly, candy, beverage) you want.</p>
+								<p class="ko">여러 타입의 비타민 제품</p>
 							</div>
 							<div class="fun_img">
 								<img src="images/main/energy_cont_1.webp" class="img_1" alt="YOURENERGY main image 1">
@@ -254,7 +281,7 @@
 								<img src="images/main/energy_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="YOURENERGY main image 3">
 								<img src="images/main/energy_cont_4.webp" loading="lazy" width="1200" class="img_4" alt="YOURENERGY main image 3">
 							</div>
-							<a href="" class="close">Close</a>
+							<a href="" class="close">닫기</a>
 						</div>
 					</div>
 				</li>
@@ -263,106 +290,55 @@
 				<li class="li_1">
 					<div class="for_hi">
 						<div class="rnd ">
-							<img src="images/main/ex_thmb.webp" alt="exmars thumbnail" />
+							<img src="images/main/ex_thmb.webp" alt="exmars 섬네일" />
 						</div>	
 					</div>
-					<a href="#" class="fn_a">SEE MORE</a>	
+					<a href="#" class="fn_a">자세히 보기</a>	
 
 					<div class="fun_div">
 						<div class="fun_bg wd_1920">
 							<p>Website</p>
-							<h2>Created in 2023</h2>
+							<h2 class="ko">2023년 제작</h2>
 							<p class="app_p ad">Affinity</p>
 							<div class="fun_descript">
-								<p>EXMARS integrates fashion and culture and provides various information, including collections of fashion brands and must-see exhibitions.</p>
+								<p class="ko">패션, 전시회, 아티스트 등 여러 분야의 중요한 이벤트를 알려주는 사이트</p>
 							</div>
 							<div class="fun_img">
 								<img src="images/main/ex_cont_1.webp" class="img_1" alt="exmars web image 1">
 								<img src="images/main/ex_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="exmars web image 2">
 								<img src="images/main/ex_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="exmars web image 3">
-								<img src="images/main/ex_cont_4.webp" loading="lazy" width="1200" class="img_4" alt="exmars mobile image">
+								<img src="images/main/ex_cont_4.webp" loading="lazy" width="1200" class="img_4" alt="exmars 모바일 화면">
 								<img src="images/main/ex_cont_5.webp" loading="lazy" width="1200" class="img_5" alt="exmars web image 4">
 							</div>
-							<a href="" class="close">Close</a>
+							<a href="" class="close">닫기</a>
 						</div>
 					</div>
 				</li>
-
-				<li class="li_0">
-					<div class="for_hi">
-						<div class="rnd ">
-							<img src="images/main/dive_thmb.webp" alt="dive_into thumbnail" />
-						</div>		
-					</div>
-					<a href="#" class="fn_a">SEE MORE</a>	
-
-					<div class="fun_div">
-						<div class="fun_bg wd_1920">
-							<p>Website</p>
-							<h2>Created in 2023</h2>
-							<p class="app_p ad">Ad</p>
-							<div class="fun_descript">
-								<p>A few images that I played with images and text.</p>
-							</div>
-							<div class="fun_img">
-								<img src="images/main/dive_cont_1.webp" class="img_1" alt="Dive Into main image 1">
-								<img src="images/main/dive_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="Dive Into main image 2">
-								<img src="images/main/dive_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="Dive Into main image 3">
-							</div>
-							<a href="" class="close">Close</a>
-						</div>
-					</div>
-				</li>
-
-
 				<li class="li_01">
 					<div class="for_hi">
 						<div class="rnd ">
 							<img src="images/main/nufork_thmb.webp" alt="nufork 섬네일" />
 						</div>	
 					</div>
-					<a href="#" class="fn_a">SEE MORE</a>	
+					<a href="#" class="fn_a">자세히 보기</a>	
 
 					<div class="fun_div">
 						<div class="fun_bg wd_1920">
 							<p>Website</p>
-							<h2>Created in 2016</h2>
+							<h2 class="ko">2016년 제작</h2>
 							<p class="app_p ad">Ad</p>
 							<div class="fun_descript">
-								<p>Advertising Agency</p>
+								<p class="ko">광고 에이전시</p>
 							</div>
 							<div class="fun_img">
 								<img src="images/main/nufork_cont_1.webp" class="img_1" alt="nufork main image 1">
 								<img src="images/main/nufork_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="nufork main image 2">
 								<img src="images/main/nufork_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 3">
+								<img src="images/main/nufork_cont_4.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 4">
+								<img src="images/main/nufork_cont_5.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 5">
+								<img src="images/main/nufork_cont_6.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 6">
 							</div>
-							<a href="" class="close">Close</a>
-						</div>
-					</div>
-				</li>
-				<li class="li_02">
-					<div class="for_hi">
-						<div class="rnd ">
-							<img src="images/main/arte_thmb.webp" alt="nufork thumbnail" />
-						</div>	
-					</div>
-					<a href="#" class="fn_a">SEE MORE</a>	
-
-					<div class="fun_div">
-						<div class="fun_bg wd_1920">
-							<p class="en">Website</p>
-							<h2>Created in 2016</h2>
-							<p class="app_p ad">Ad</p>
-							<div class="fun_descript">
-								<p>Art School</p>
-							</div>
-							<div class="fun_img">
-								<img src="images/main/arte_cont_1.webp" class="img_1" alt="arte main image 1">
-								<img src="images/main/arte_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="arte main image 2">
-								<img src="images/main/arte_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="arte main image 3">
-								<img src="images/main/arte_cont_4.webp" loading="lazy" width="1200" class="img_3" alt="arte main image 3">
-							</div>
-							<a href="" class="close">Close</a>
+							<a href="" class="close">닫기</a>
 						</div>
 					</div>
 				</li>
