--- a/index_ko.html
+++ b/index_ko.html
@@ -214,6 +214,33 @@
 
 		<section id="for_fun">
 			<ul>
+				<li class="li_4">
+					<div class="for_hi">
+						<div class="rnd ">
+							<img src="images/main/motiv_thmb.webp" alt="모티브 앱 섬네일" />
+						</div>	
+					</div>
+					<a href="#" class="fn_a">자세히 보기</a>	
+					<div class="fun_div">
+						<div class="fun_bg wd_1920">
+							<p>Application</p>
+							<h2 class="ko">2025년 제작</h2>
+							<p class="app_p ad">Affinity Designer</p>
+							<div class="fun_descript">
+								<p class="ko">동기부여를 중심으로 아이디어와 하루 일과를 더 편리하고 섬세하게 관리할 수 있는 어플리케이션</p>
+							</div>
+							<div class="fun_img">
+								<img src="images/main/motiv_cont_1.webp" class="img_1" alt="motiv main image">
+								<img src="images/main/motiv_cont_2.webp" class="img_2" alt="motiv main image">
+								<img src="images/main/motiv_cont_3.webp" class="img_3" alt="motiv main image">
+								<img src="images/main/motiv_cont_4.webp" class="img_4 gry" alt="motiv main image">
+								<img src="images/main/motiv_cont_5.webp" class="img_5 gry" alt="motiv main image">
+								<img src="images/main/motiv_cont_6.webp" class="img_6 gry" alt="motiv main image">
+							</div>
+							<a href="" class="close">닫기</a>
+						</div>
+					</div>
+				</li>
 				<li class="li_3">
 					<div class="for_hi">
 						<div class="rnd ">
@@ -240,7 +267,7 @@
 				<li class="li_2">
 					<div class="for_hi">
 						<div class="rnd ">
-							<img src="images/main/energy_thmb.webp" loading="lazy" alt="yourenergy 섬네일" />
+							<img src="images/main/energy_thmb.webp" alt="yourenergy 섬네일" />
 						</div>	
 					</div>
 					<a href="#" class="fn_a">자세히 보기</a>	
@@ -267,7 +294,7 @@
 				<li class="li_1">
 					<div class="for_hi">
 						<div class="rnd ">
-							<img src="images/main/ex_thmb.webp" loading="lazy" alt="exmars 섬네일" />
+							<img src="images/main/ex_thmb.webp" alt="exmars 섬네일" />
 						</div>	
 					</div>
 					<a href="#" class="fn_a">자세히 보기</a>	
@@ -291,36 +318,10 @@
 						</div>
 					</div>
 				</li>
-
-				<li class="li_0">
-					<div class="for_hi">
-						<div class="rnd ">
-							<img src="images/main/dive_thmb.webp" loading="lazy" alt="dive_into 섬네일" />
-						</div>	
-					</div>
-					<a href="#" class="fn_a">자세히 보기</a>	
-
-					<div class="fun_div">
-						<div class="fun_bg wd_1920">
-							<p>Website</p>
-							<h2 class="ko">2023년 제작</h2>
-							<p class="app_p ad">Ad</p>
-							<div class="fun_descript">
-								<p class="ko">이미지와 텍스트를 활용한 디자인</p>
-							</div>
-							<div class="fun_img">
-								<img src="images/main/dive_cont_1.webp" class="img_1" alt="Dive Into main image 1">
-								<img src="images/main/dive_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="Dive Into main image 2">
-								<img src="images/main/dive_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="Dive Into main image 3">
-							</div>
-							<a href="" class="close">닫기</a>
-						</div>
-					</div>
-				</li>
 				<li class="li_01">
 					<div class="for_hi">
 						<div class="rnd ">
-							<img src="images/main/nufork_thmb.webp" loading="lazy" alt="nufork 섬네일" />
+							<img src="images/main/nufork_thmb.webp" alt="nufork 섬네일" />
 						</div>	
 					</div>
 					<a href="#" class="fn_a">자세히 보기</a>	
@@ -337,32 +338,9 @@
 								<img src="images/main/nufork_cont_1.webp" class="img_1" alt="nufork main image 1">
 								<img src="images/main/nufork_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="nufork main image 2">
 								<img src="images/main/nufork_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 3">
-							</div>
-							<a href="" class="close">닫기</a>
-						</div>
-					</div>
-				</li>
-				<li class="li_02">
-					<div class="for_hi">
-						<div class="rnd ">
-							<img src="images/main/arte_thmb.webp" loading="lazy" alt="nufork 섬네일" />
-						</div>	
-					</div>
-					<a href="#" class="fn_a">자세히 보기</a>	
-
-					<div class="fun_div">
-						<div class="fun_bg wd_1920">
-							<p class="en">Website</p>
-							<h2 class="ko">2016년 제작</h2>
-							<p class="app_p ad">Ad</p>
-							<div class="fun_descript">
-								<p class="ko">아트 스쿨</p>
-							</div>
-							<div class="fun_img">
-								<img src="images/main/arte_cont_1.webp" class="img_1" alt="arte main image 1">
-								<img src="images/main/arte_cont_2.webp" loading="lazy" width="1200" class="img_2" alt="arte main image 2">
-								<img src="images/main/arte_cont_3.webp" loading="lazy" width="1200" class="img_3" alt="arte main image 3">
-								<img src="images/main/arte_cont_4.webp" loading="lazy" width="1200" class="img_3" alt="arte main image 3">
+								<img src="images/main/nufork_cont_4.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 4">
+								<img src="images/main/nufork_cont_5.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 5">
+								<img src="images/main/nufork_cont_6.webp" loading="lazy" width="1200" class="img_3" alt="nufork main image 6">
 							</div>
 							<a href="" class="close">닫기</a>
 						</div>
